# findr

./: .gitignore  Dockerfile  Dockerfile.slim  docker-compose.yaml  docker-compose.yml  fabfile.py  pyproject.toml  requirements.txt  resume.docx  tasks.py
.github/workflows/: docker-image.yml
src/: main.py  testtesttest.py
src/bot/: bot.py  bot_texts.py
src/common/: db.py  density.py  exceptions.py  logging.py  markdown.py  post.py  telegram.py  tinyurl.py  utils.py
src/db/: db_filler.py  embedding.py  resume.txt  sqlite.py
src/gpt/prompts/: filter.txt  preprocess.txt  prompt_check.txt  prompt_check_long.txt  prompt_check_short.txt  relevant.txt
src/gpt/schemas/: filter.py  preprocess.py  prompt_check.py  prompt_check_long.py  prompt_check_short.py  relevant.py
src/matching/: filtering.py  utils.py
src/parsing/: converter.py  driver.py  exceptions.py  geeekjobs.py  habrahabr.py  headhunter.py  interface.py  linkedin_jobs.py  parsing.py  telegraph.py  utils.py
src/preprocessing/: channels.py  post_manager.py  post_sourser.py  prompt.py  utils.py
